# aras

./: .env.example  .gitignore  README.md  check_spotify_app.py  fix_pydantic.py  home.glb  install.py  install_simple.py  pyproject.toml  reauthenticate_spotify.py  requirements-minimal.txt  requirements.txt  run_aras.py  run_aras_voice.py  run_home_viewer.py  setup.py  spotify_auth.py  spotify_diagnostic.py  start_headless.bat  start_headless.ps1  start_headless.py  start_server.py  start_ui.py  test_aras.py  test_installation.py  test_simple.py  test_web_integration.py  use_spotify_code.py
servers/: fixed_mock_pi.py  main.ino  mock_raspberry_pi.py  start_mock_pi.py
src/: spotify_auth.py
src/aras/: __init__.py  __main__.py  config.py  main.py  models.py  prompt_config.py  prompts.py  responses.py  server.py
src/aras/core/: __init__.py  agent.py  message_handler.py  state_manager.py
src/aras/examples/: prompt_usage.py  response_usage.py
src/aras/tools/: __init__.py  arduino_bluetooth_tool.py  base.py  communication_tools.py  file_tools.py  health_monitor.py  home_tools.py  knowledge_tools.py  mock_pi_tool.py  registry.py  safety_tools.py  spotify_sync_tool.py  spotify_tool.py  system_tools.py  telegram_tools.py  voice_vision_tools.py  web_tools.py
src/aras/ui/: __init__.py  app.py  chatbox.py  circular_indicator.py  home_2d_viewer.py  home_3d_viewer.py  home_viewer_app.py  home_visualization.py  main_window.py  qt_visualizer.py  voice_handler.py
web-frontend/: package-lock.json  package.json
web-frontend/src/app/: globals.css  layout.tsx  page.tsx
(+1 files in other folders)
